--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -111,7 +111,7 @@
 				
 				<!-- 로그인후 -->
 				<div class="login-show h-img" id="loginAf" style="display:none;">
-					<span class="sog-1"><a href="/myCollection"><img src="resources/img/icon-2.png" /></a></span>
+					<span class="sog-1"><a href="javascript:void(0);" class="myCollection"><img src="resources/img/icon-2.png" /></a></span>
 					<!-- <span class="sog-2 lg-my"><a href="javascript:void(0);"><img src="resources/img/tablet/icon-3.png" /></a></span> -->
 					<span class="sog-2 lg-my"><a href="javascript:void(0);"><img src="resources/img/tablet/icon-3.png" /></a></span>
 					
@@ -137,7 +137,7 @@
 							<li style="display:none"><a href="/memberEdit"><img src="resources/img/ic-6.jpg" /><span>회원정보 수정</span></a></li>
 							<li><a href="/myDeal"><img src="resources/img/ic-2.jpg" /><span>거래 내역</span></a></li>
 							<!-- class="myCollection" -->
-							<li><a href="/myCollection"><img src="resources/img/ic-3.jpg" /><span>My Collection</span></a></li>
+							<li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/ic-3.jpg" /><span>My Collection</span></a></li>
 							<!-- <li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/ic-3.jpg" /><span>나의 소장품</span></a></li> -->
 							<!-- class="scrap" -->
 							<li><a href="javascript:void(0);" class="scrap"><img src="resources/img/ic-4.jpg" /><span>스크랩</span></a></li>
@@ -174,7 +174,7 @@
 							<li style="display:none"><a href="/memberEdit"><img src="resources/img/ic-6.jpg" /><span>회원정보 수정</span></a></li>
 							<li><a href="/myDeal"><img src="resources/img/ic-2.jpg" /><span>거래 내역</span></a></li>
 							<!-- class="myCollection" -->
-							<li><a href="/myCollection"><img src="resources/img/ic-3.jpg" /><span>My Collection</span></a></li>
+							<li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/ic-3.jpg" /><span>My Collection</span></a></li>
 							<!-- <li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/ic-3.jpg" /><span>나의 소장품</span></a></li> -->
 							<!-- class="scrap" -->
 							<li><a href="javascript:void(0);" class="scrap"><img src="resources/img/ic-4.jpg" /><span>스크랩</span></a></li>
@@ -195,7 +195,7 @@
 									<li><a href="#" id="artstReg" data-toggle="modal" data-target="#authorModal1"><span>작가등록</span></a></li>
 									<li><a href="#" onclick="workReg()"><span>작품등록</span></a></li>
 									<!-- <li><a href="#" onclick="collectionReg()"><span>판매하기</span></a></li> -->
-									<li><a href="/myCollection" ><span>판매하기</span></a></li>
+									<li><a href="javascript:void(0);" class="myCollection" ><span>판매하기</span></a></li>
 									
 								</ul>
 							</div>
