--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -318,10 +318,10 @@
 											<input type="file" id="workGrtUrl" class="upload-hidden" accept=".jpeg, .jpg, .png, .pdf"> 
 										</div>
 										<p class="table-p">
-											<!-- ※ 향후에 거래로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시기 바랍니다.<br/>
+											<!-- ※ 향후에 판매로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시기 바랍니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요. -->
 											※ png, jpeg, pdf 형식으로 등록해주세요.(5MB 미만) <br>
-											※ 향후에 거래로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시길 바랍니다. <br>
+											※ 향후에 판매로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시길 바랍니다. <br>
 											※ 구매처의 보증서에 Resale-Lock (재판매 금지)의 여부와 기간을 꼭 확인 후 등록을 해주세요. <br>
 										</p>
 									</td>
