--- a/src/main/resources/templates/thymeleaf/fo/myPage/secession.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/secession.html
@@ -66,9 +66,7 @@
 	  fbq('init', '5995234030505207');
 	  fbq('track', 'PageView');
 	</script>
-	<noscript>
-		<img height="1" width="1" style="display:none"src="https://www.facebook.com/tr?id=5995234030505207&ev=PageView&noscript=1"/>
-	</noscript>
+	<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=5995234030505207&ev=PageView&noscript=1"/></noscript>
     
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
