관리자 페이지 거래 관련 파일 체크 업로드 / 다운로드 기능 추가

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -323,8 +323,8 @@
 										
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt()">영수증</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a>
+											<!-- <a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a> -->
 										</div>
 									</div>
 								</div>
