--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -464,8 +464,8 @@
 										
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt1()">영수증</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a>
+											<!-- <a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a> -->
 										</div>
 									</div>
 								</div>
