--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -323,8 +323,10 @@
 										
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt()">영수증</a>
-											<!-- <a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a> -->
+											<a th:if="${not #strings.isEmpty(result.payMntInfo.dealConfirmation)}" th:href="${result.payMntInfo.dealConfirmation}" target="_blank" class="btns-3">거래 확인서</a>
+											<a th:if="${not #strings.isEmpty(result.payMntInfo.dealStatement)}" th:href="${result.payMntInfo.dealStatement}" target="_blank" class="btns-3">거래 명세서</a>
+											<a th:if="${not #strings.isEmpty(result.payMntInfo.dealContract)}" th:href="${result.payMntInfo.dealContract}" target="_blank" class="btns-3">거래 계약서</a>
+											<a th:if="${not #strings.isEmpty(result.payMntInfo.dealConditionCheck)}" th:href="${result.payMntInfo.dealConditionCheck}" target="_blank" class="btns-3">컨디션 체크</a>
 										</div>
 									</div>
 								</div>
@@ -373,10 +375,10 @@
 										
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt()">영수증</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래 확인서</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">컨디션 체크</a>
+											<a th:if="${not #strings.isEmpty(result.workDealInfo.dealConfirmation)}" th:href="${result.workDealInfo.dealConfirmation}" target="_blank" class="btns-3">거래 확인서</a>
+											<a th:if="${not #strings.isEmpty(result.workDealInfo.dealStatement)}" th:href="${result.workDealInfo.dealStatement}" target="_blank" class="btns-3">거래 명세서</a>
+											<a th:if="${not #strings.isEmpty(result.workDealInfo.dealContract)}" th:href="${result.workDealInfo.dealContract}" target="_blank" class="btns-3">거래 계약서</a>
+											<a th:if="${not #strings.isEmpty(result.workDealInfo.dealConditionCheck)}" th:href="${result.workDealInfo.dealConditionCheck}" target="_blank" class="btns-3">컨디션 체크</a>
 										</div>
 									</div>
 								</div>
