응찰히스토리 최초 응찰자  미노출

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -1236,7 +1236,14 @@ function chart() {
 	                    	return title;
 	                    },
 	            		footer: function(tooltipItems) {
-	            			var footer = "응찰자: "+bidMbrNcknm[tooltipItems[0].dataIndex];
+	            			
+	            			var footer = "";
+	            			if(tooltipItems[0].dataIndex == 0) {
+	            				footer = "";
+	            			} else {
+	            				footer = "응찰자: "+bidMbrNcknm[tooltipItems[0].dataIndex];	
+	            			}
+	            			
 	            			return footer;
 	            		}
 	                }
