응찰히스토리 : 시작시 응찰자 비노출

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -387,7 +387,13 @@ function bidHistory(dealSq) {
 	                    	return title;
 	                    },
 	                    footer: function(tooltipItems) {
-	            			var footer = "응찰자: "+bidMbrNcknm[tooltipItems[0].dataIndex];
+	            			//var footer = "응찰자: "+bidMbrNcknm[tooltipItems[0].dataIndex];
+	            			var footer = "";
+	            			if(tooltipItems[0].dataIndex == 0) {
+	            				footer = "";
+	            			} else {
+	            				footer = "응찰자: "+bidMbrNcknm[tooltipItems[0].dataIndex];	
+	            			}
 	            			return footer;
 	            		}
 	                }
