--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -228,9 +228,9 @@
 				<ul class="mab-ul">
 					<li><a href="#" id="artstReg" data-toggle="modal" data-target="#authorModal1"><img src="resources/img/icon-4.png" /> <span>작가등록</span></a></li>
 					<li><a href="javascript:void(0);" onclick="workReg()"><img src="resources/img/icon-5.png" /> <span>작품등록</span></a></li>
-					<!-- <li><a href="javascript:void(0);" onclick="collectionReg()"><img src="resources//img/icon-6.png" /> <span>판매하기</span></a></li> -->
-					
-					<li><a href="/myCollection"><img src="resources//img/icon-6.png" /> <span>판매하기</span></a></li>
+					<li><a href="javascript:void(0);" class="myCollection"><img src="resources//img/icon-6.png" /> <span>판매하기</span></a></li>
+					<!-- onclick="collectionReg()" -->
+					<!-- <li><a href="/myCollection"><img src="resources//img/icon-6.png" /> <span>판매하기</span></a></li> -->
 					
 					
 				</ul>
@@ -254,7 +254,7 @@
 				<div class="search-show">
 					<div class="sea-box">
 						<img src="resources/img/w-logo.jpg" class="sea-img" />
-						
+						<!-- <img src="resources/img/new_dalogo.png" class="sea-img" /> -->
 						<div class="sea-won">
 							<!-- <div class="select-box">
 								<select>
