--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -84,6 +84,7 @@
 		<div class="body-wrap">
 		
 			<input type="hidden" id="artstSq" >
+			<input type="hidden" id="artistBirthYear" >
 			<!-- 
 			<ul class="nav nav-pills ait-nav" id="pills-tab" role="tablist">
 				<li class="nav-item active">
@@ -219,10 +220,14 @@ var artstInfo = /*[[${result}]]*/ 'default';
 var result;
 $(function() { 
 	$("#artstSq").val(artstInfo.artistInfo.artstSq);
+	
 	var career = artstInfo.career;
 	var eductn = artstInfo.eductn;
 	var exhbtn = artstInfo.exhbtn;
 	var exhbtnAword = artstInfo.exhbtnAword;
+	var artistBirthYear = artstInfo.artistBirthYear;
+	
+	$("#artistBirthYear").val(artstInfo.artistBirthYear);
 	
 	var artstInfoHtml = "";
 	var artstInfoHtml2 = "";
@@ -363,6 +368,9 @@ function sorting(obj){ //정렬
 	}
 }
 function onload(sort, type){
+	
+	var artstBirthYear = $("#artistBirthYear").val();
+	
 	if(sort != null && type != null){
 		var paramMap = new Object();
 		paramMap.sort = sort;
@@ -424,7 +432,8 @@ function onload(sort, type){
 				
 				html += '<div class="text-s" style="padding-left:5px;text-align:left">';
 				
-				html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+				//html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+				html += '<h3>'+ result[i].artstActvtyNm +' ('+ artstBirthYear +')</h3>';
 				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
 				html += '<p>'+ result[i].workMatrl +'</p>';
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
@@ -479,7 +488,8 @@ function onload(sort, type){
 				
 				html += '<div class="text-s" style="padding-left:5px;text-align:left">';
 				
-				html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+				//html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+				html += '<h3>'+ result[i].artstActvtyNm +' ('+ artstBirthYear +')</h3>';
 				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
 				html += '<p>'+ result[i].workMatrl +'</p>';
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
@@ -525,7 +535,8 @@ function onload(sort, type){
 				
 				html += '<div class="text-s" style="padding-left:5px;text-align:left">';
 				
-				html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+				//html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+				html += '<h3>'+ result[i].artstActvtyNm +' ('+ artstBirthYear +')</h3>';
 				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
 				html += '<p>'+ result[i].workMatrl +'</p>';
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
@@ -566,7 +577,8 @@ function onload(sort, type){
 				html += '</div>';
 				
 				html += '<div class="text-s" style="padding-left:5px;text-align:left">';
-				html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+				//html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+				html += '<h3>'+ result[i].artstActvtyNm +' ('+ artstBirthYear +')</h3>';
 				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
 				html += '<p>'+ result[i].workMatrl +'</p>';
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
