검색 로고이미지 파일 변경

--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -253,8 +253,9 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/w-logo.jpg" class="sea-img" />
-						<!-- <img src="resources/img/new_dalogo.png" class="sea-img" /> -->
+						<!-- <img src="resources/img/w-logo.jpg" class="sea-img" /> -->
+						<img src="resources/img/newdalogo.png" class="sea-img" width="237"/>
+						
 						<div class="sea-won">
 							<!-- <div class="select-box">
 								<select>
