--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -254,7 +254,8 @@
 											</div>
 											<p class="table-p">
 												※ 향후에 판매로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시기 바랍니다.<br/>
-												※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+												※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요. <br>
+												※구매처의 보증서에 Resale-Lock (재판매 금지)의 여부와 기간을 꼭 확인 후 등록을 해주세요
 											</p>
 										</td>
 									</tr>
@@ -287,6 +288,9 @@
 												<span class="cg-x">X</span> 
 												<input type="number" class="input-4" id="workSizeDepth" th:value="${result.work.workSizeDepth}"/>
 											</div>
+											<p class="table-p">
+												※사이즈 단위는 cm 입니다.
+											</p>
 										</td>
 									</tr>
 									<tr>
