거래 관련 리포트 안내 Alert 창 추가 / 판매자, 구매자 거래 명세서 구분나누기

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -1793,7 +1793,7 @@ function setTodayTime(){
 	   	    function(){ $(this).removeClass('gis') }
 	   	  )
 	   	  
-	   	  $("#myModal3").modal("show");
+	   	  //$("#myModal3").modal("show");
       });
       
 $(".user-on").click(function() {   
