--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -324,9 +324,13 @@
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt()">영수증</a>
 											<a th:if="${not #strings.isEmpty(result.payMntInfo.dealConfirmation)}" th:href="${result.payMntInfo.dealConfirmation}" target="_blank" class="btns-3">거래 확인서</a>
-											<a th:if="${not #strings.isEmpty(result.payMntInfo.dealStatement)}" th:href="${result.payMntInfo.dealStatement}" target="_blank" class="btns-3">거래 명세서</a>
+											<a th:unless="${not #strings.isEmpty(result.payMntInfo.dealConfirmation)}" href="jacascript:void(0);" data-toggle="modal" data-target="#dealConfirmationAlert" class="btns-3">거래 확인서</a>
+											<a th:if="${not #strings.isEmpty(result.payMntInfo.dealStatementS)}" th:href="${result.payMntInfo.dealStatementS}" target="_blank" class="btns-3">거래 명세서</a>
+											<a th:unless="${not #strings.isEmpty(result.payMntInfo.dealStatementS)}" href="jacascript:void(0);" onclick="modalAlertShow('거래 명세서가 준비되면 안내해드립니다.');" class="btns-3">거래 명세서</a>
 											<a th:if="${not #strings.isEmpty(result.payMntInfo.dealContract)}" th:href="${result.payMntInfo.dealContract}" target="_blank" class="btns-3">거래 계약서</a>
+											<a th:unless="${not #strings.isEmpty(result.payMntInfo.dealContract)}" href="jacascript:void(0);" onclick="modalAlertShow('거래 계약서가 준비되면 안내해드립니다.');" class="btns-3">거래 계약서</a>
 											<a th:if="${not #strings.isEmpty(result.payMntInfo.dealConditionCheck)}" th:href="${result.payMntInfo.dealConditionCheck}" target="_blank" class="btns-3">컨디션 체크</a>
+											<a th:unless="${not #strings.isEmpty(result.payMntInfo.dealConditionCheck)}" href="jacascript:void(0);" data-toggle="modal" data-target="#dealConditionCheckAlert" class="btns-3">컨디션 체크</a>
 										</div>
 									</div>
 								</div>
@@ -376,9 +380,13 @@
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt()">영수증</a>
 											<a th:if="${not #strings.isEmpty(result.workDealInfo.dealConfirmation)}" th:href="${result.workDealInfo.dealConfirmation}" target="_blank" class="btns-3">거래 확인서</a>
-											<a th:if="${not #strings.isEmpty(result.workDealInfo.dealStatement)}" th:href="${result.workDealInfo.dealStatement}" target="_blank" class="btns-3">거래 명세서</a>
+											<a th:unless="${not #strings.isEmpty(result.workDealInfo.dealConfirmation)}" href="jacascript:void(0);" data-toggle="modal" data-target="#dealConfirmationAlert" class="btns-3">거래 확인서</a>
+											<a th:if="${not #strings.isEmpty(result.workDealInfo.dealStatementS)}" th:href="${result.workDealInfo.dealStatementS}" target="_blank" class="btns-3">거래 명세서</a>
+											<a th:unless="${not #strings.isEmpty(result.workDealInfo.dealStatementS)}" href="jacascript:void(0);" onclick="modalAlertShow('거래 명세서가 준비되면 안내해드립니다.');" class="btns-3">거래 명세서</a>
 											<a th:if="${not #strings.isEmpty(result.workDealInfo.dealContract)}" th:href="${result.workDealInfo.dealContract}" target="_blank" class="btns-3">거래 계약서</a>
+											<a th:unless="${not #strings.isEmpty(result.workDealInfo.dealContract)}" href="jacascript:void(0);" onclick="modalAlertShow('거래 계약서가 준비되면 안내해드립니다.');" class="btns-3">거래 계약서</a>
 											<a th:if="${not #strings.isEmpty(result.workDealInfo.dealConditionCheck)}" th:href="${result.workDealInfo.dealConditionCheck}" target="_blank" class="btns-3">컨디션 체크</a>
+											<a th:unless="${not #strings.isEmpty(result.workDealInfo.dealConditionCheck)}" href="jacascript:void(0);" data-toggle="modal" data-target="#dealConditionCheckAlert" class="btns-3">컨디션 체크</a>
 										</div>
 									</div>
 								</div>
@@ -459,9 +467,66 @@
 		</div>
 	</div>
 </div>
+<!-- 거래 확인서 안내 -->
+<div class="modal fade modal-s" id="dealConfirmationAlert" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+	<div class="modal-dialog modal-baeg max-w530">
+		<div class="modal-content">
+			<div class="modal-header">
+				<div class="baegs">
+					<h2>거래 확인서가 준비되면<br/>안내해 드립니다.</h2>
+				    <img src="resources/img/ba/icon-1.png" class="con-img" />
+				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="resources/img/ba/icon-end.png" /></div> -->
+				</div>
+
+			</div>
+			<div class="modal-body">
+				<div class="md-box-1">
+					<p class="min-h240">
+					딜링아트에서 거래된 모든 작품은 구매확정시 거래확인서가 발급됩니다.<br/><br/>
+					1. 거래 확인서는 작품운송에 대한 출고, 수령내역을 증명하는 문서 입니다.<br/>
+					2. 구매확정 시 거래내역상세 페이지에서 확인하실 수 있습니다.<br/>
+					</p>
+					<div class="baeg-btn mg_t30">
+						<a href="#"><button type="button" class="baeg-b1" data-dismiss="modal" aria-label="Close">확인</button></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- 컨디션 체크 리포트 안내 -->
+<div class="modal fade modal-s" id="dealConditionCheckAlert" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+	<div class="modal-dialog modal-baeg max-w530">
+		<div class="modal-content">
+			<div class="modal-header">
+				<div class="baegs">
+					<h2>컨디션 체크가 준비되면<br/>안내해 드립니다.</h2>
+				    <img src="resources/img/ba/icon-1.png" class="con-img" />
+				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="resources/img/ba/icon-end.png" /></div> -->
+				</div>
+
+			</div>
+			<div class="modal-body">
+				<div class="md-box-1">
+					<p class="min-h240">
+					판매자로부터 작품 픽업 후 컨디션 체크를 진행합니다.<br/><br/>
+					1. 픽업 시 작품 사진 촬영, 보존 상태 검수를 합니다.<br/>
+					2. 픽업 후 영업일 기준 3~5일이 소요 됩니다.<br/>
+					3. 리포트가 작성되면 거래내역상세 메뉴에서 확인하실 수 있습니다.
+					</p>
+					
+					<div class="baeg-btn mg_t30">
+						<a href="#"><button type="button" class="baeg-b1" data-dismiss="modal" aria-label="Close">확인</button></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <script th:inline="javascript">
 $(function(){
 	$(".con-right").hide();
+	$(".con-left2").hide();
 	
 	const url = new URL(window.location.href);
 	const urlParam = url.searchParams;
@@ -472,7 +537,10 @@ $(function(){
 		return;
 	} else {
 		$(".con-right").show();
+		$(".con-left2").show();
 	}
+	
+	//$(".con-right").show();
 });
 
 
