거래등록 - > 판매등록 이미지 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -89,7 +89,7 @@
 				<div class="con-wrap">
 					<div class="con-left">
 						<div class="con-btn">
-							<a href="#" data-toggle="modal" data-target="#paintModal"><img src="resources/img/de/paint.png" /></a>
+							<a href="#" data-toggle="modal" data-target="#paintModal"><img src="resources/img/de/paint_new.png" /></a>
 						</div>
 					
 						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
