회원가입 수정 / 워딩 수정

--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -340,7 +340,7 @@
 							<p class="lb-p2"><a href="#" onclick="openFindPwdModal()" data-toggle="modal">비밀번호 재설정</a></p>
 							<!-- <p class="lb-p2"><a href="#" data-toggle="modal" data-target="#memberModal"><span>회원가입</span></a></p> -->
 <!-- 							<p class="lb-p2"><a href="javascript:fnModalAlert();"><span>회원가입</span></a> -->
-							<a style="cursor:pointer;" class="lb-p2" data-toggle="modal" data-target="#memberModal">회원가입</a>
+							<a style="cursor:pointer;" class="lb-p2" href="/joinStep1">회원가입</a>
 						</div>
 						
 					</div>
