회원가입 처리중 메세지 삭제

--- a/src/main/resources/templates/thymeleaf/fo/member/join_2.html
+++ b/src/main/resources/templates/thymeleaf/fo/member/join_2.html
@@ -566,10 +566,10 @@
   		memberInputBtnClick = 0;
   	}
   	
-  	if(memberInputBtnClick > 1){
+	/* if(memberInputBtnClick > 1){
   		modalAlertShow("회원 가입 처리중입니다. 잠시만 기다려주세요.");
   		return;
-  	}
+  	} */
   	 
   	 let memParams = {
   		  "mbrId" : mbrId,
