검색 input autocomplete off 설정

--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -262,7 +262,7 @@
 									<option>작가명</option>
 								</select>
 							</div> -->
-							<input type="text" id="ibx_search" onkeydown="javascript: if (event.keyCode == 13) {btn_search_onclick();}" onkeyup="ibx_search_onkeyup(this);" style="outline: none;" placeholder="작품이나 작가명으로 검색해보세요."/>
+							<input type="text" id="ibx_search" onkeydown="javascript: if (event.keyCode == 13) {btn_search_onclick();}" onkeyup="ibx_search_onkeyup(this);" style="outline: none;" placeholder="작품이나 작가명으로 검색해보세요." autocomplete="off"/>
 							<a href="javascript:void(0);" onclick="btn_search_onclick();"><img src="resources/img/icon-2.jpg" /></a>
 						</div>
 						<div id="autocomplete">
