--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -583,9 +583,9 @@ html, body{font-size: calc(100vw / 75);}
 
 .cns-div ul li:last-child{padding-right:0;}
 .cns-box{
-    width: 100%;
-    height: 100%;
-    border: #ececec 2px solid;
+    width: 315px;
+    height: 215px;
+    border: #ececec 0px solid;
 }
 .cns-box > img{
     width: 100%;
