--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -210,7 +210,7 @@ function myWorkList(){
 				html += '<div>';
 				html += '<div class="item-div-img active-on">';
 				//작품 이미지
-				//html += '	<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
+				html += '	<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
 				html += '		<div class="item-ho" style="cursor:pointer" onclick="biddingMove('+result[i].workSq+')">';
 				html += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
